syntax = "proto3";

package model;

option java_package = "com.skillcaptain.app.grpc.post.model";
option java_outer_classname = "PostProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post) {}
  rpc GetPost (GetPostRequest) returns (Post) {}
  rpc GetPosts (GetPostsRequest) returns (PostsResponse) {}
}

message CreatePostRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
  bool requires_notification = 4;
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostsRequest {
  string user_id = 1;
//  int32 offset = 2; TODO Add more filters
//  int32 limit = 3;
}

message Post {
  string id = 1;
  string forum_id = 2;
  string title = 3;
  string content = 4;
  string author_id = 5;
}

message PostsResponse {
  repeated Post posts = 1;
}